--- a/index.html
+++ b/index.html
@@ -13,9 +13,8 @@
 <body>
     <div class="container">
         <div class="forms-container">
-            <div class="signin-signup">
                 <div class="signin-signup">
-                    <form action="a" class="sign-in-form">
+                    <form action="#" class="sign-in-form">
                         <h2 class="title">Sign in</h2>
                         <div class="input-field">
                              <i class="fas fa-user"></i>  
@@ -27,26 +26,49 @@
                             <input type="password" placeholder="Password"/>
                         </div>
                         <input type="submit" class="btn solid" value="LOGIN">
-                        <p class="social-text">Or Sign in with social platforms</p>
+                        <p class="social-text">Or Sign in with</p>
                         <div class="social-media">
-                            <a href="a" class="social-icon">
+                            <a href="#" class="social-icon">
                                 <i class="fab fa-facebook-f"></i>
                             </a>
-                            <a href="a" class="social-icon">
+                            <a href="#" class="social-icon">
                                 <i class="fab fa-twitter"></i>
                             </a>
-                            <a href="a" class="social-icon">
+                            <a href="#" class="social-icon">
                                 <i class="fab fa-google"></i>
                             </a>
-                            <a href="a" class="social-icon">
+                            <a href="#" class="social-icon">
                                 <i class="fab fa-linkedin-in"></i>
-                            </a>
+                            </a> 
                         </div>
                     </form>
                 </div>
-            </div>
-        </div>
-        <div class="panels-container"></div>
+            <div class="panels-container">
+                <div class="panel left-panel">
+                    <img src="sample images/logo4.png" alt="image" class="image1">
+                    <div class="signup-signup">
+                        <form action="#" class="sign-up-form">
+                            <h2 class="title">New User? Sign up</h2>
+                            <div class="input-field">
+                                <i class="fas fa-user"></i>  
+                                <input type="text" placeholder="Username"/>
+                            </div>
+                            <div class="input-field">
+                                <i class="fas fa-envelope"></i>  
+                                <input type="email" placeholder="Email"/>
+                            </div>
+            
+                            <div class="input-field">
+                                <i class="fas fa-lock"></i>  
+                                <input type="password" placeholder="Password"/>
+                            </div>
+                            <input type="submit" class="btn solid" value="SIGN UP">
+                        </form>
+                    </div>
+                </div>
+            </div>  
+        </div>    
+        <img src="sample images/image 1.jpg" alt="image" class="image2">
     </div>
     <script scr="form.js"></script>
 </body>
