--- a/index.html
+++ b/index.html
@@ -42,29 +42,29 @@
                             </a> 
                         </div>
                     </form>
+                    <div class="signup-signup">
+                        <p class="text"> New User? </p>
+                        <input type="submit" class="btn solid" value="SIGN UP">
+                    </div>
                 </div>
             <div class="panels-container">
                 <div class="panel left-panel">
                     <img src="sample images/logo4.png" alt="image" class="image1">
-                    <div class="signup-signup">
-                        <form action="#" class="sign-up-form">
-                            <h2 class="title">New User? Sign up</h2>
-                            <div class="input-field">
-                                <i class="fas fa-user"></i>  
-                                <input type="text" placeholder="Username"/>
-                            </div>
-                            <div class="input-field">
-                                <i class="fas fa-envelope"></i>  
-                                <input type="email" placeholder="Email"/>
-                            </div>
-            
-                            <div class="input-field">
-                                <i class="fas fa-lock"></i>  
-                                <input type="password" placeholder="Password"/>
-                            </div>
-                            <input type="submit" class="btn solid" value="SIGN UP">
-                        </form>
-                    </div>
+                    <p class="title"> Our Mission</p>
+                    <p2>Dr. Prachi Singh, BDS, MS Implant and Cosmetic Dentistry located 
+                        in Patna, focuses on providing state-of-the-art, gentle, and 
+                        quality dental care to patients of all ages to enhance their 
+                        oral health as well as their quality of life. Our mission is to 
+                        provide the highest levels of general, cosmetic, pediatric, and 
+                        family dental care to our patients while treating them like family.</p2>
+
+                       <p3>
+                        With her education and expertise, Dr. Prachi Singh and her team 
+                        of dental health professionals offer world-class dental care 
+                        in a relaxed dental environment. We are focused on upholding a 
+                        commitment to quality while offering our patients the best and 
+                        quality dental services.
+                       </p3> 
                 </div>
             </div>  
         </div>    
